--- a/.github/workflows/pkgbuild.yml
+++ b/.github/workflows/pkgbuild.yml
@@ -7,27 +7,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  debbuild:
-    name: Debian
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Pre-requisites
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -qq apt-utils build-essential gzip devscripts debhelper bats
-      - name: Build Debian Package
-        run: |
-          git clone https://github.com/wslutilities/wslu-debian builder
-          cd builder/
-          bash ./build.sh --ci dev debian unstable
-          cd ../
-          mkdir -p ./pkgs
-          mv ../wsl*.* ./pkgs
-      - uses: actions/upload-artifact@v4
-        with:
-          name: DebianDEBs
-          path: pkgs
   pgwbuild:
     name: Pengwin
     runs-on: ubuntu-22.04
@@ -64,9 +43,9 @@ jobs:
       - name: deploy to the dev
         env:
           PACKAGECLOUD_TOKEN: ${{ secrets.PGW_DEV_DEPLOY_KEY }}
-        run: package_cloud push whitewaterfoundry/wslu/debian/bullseye ./PengwinDEBs/*.deb --skip-errors
+        run: package_cloud push whitewaterfoundry/wslu/debian/bookworn ./PengwinDEBs/*.deb --skip-errors
   rpmcoprbuild:
-    name: RPM - Cool Other Package Repo
+    name: RPM Build
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
