--- a/.github/workflows/pkgdeploy.yaml
+++ b/.github/workflows/pkgdeploy.yaml
@@ -4,31 +4,14 @@ on:
     tags:
       - v4.*
       - v3.*
+  workflow_dispatch:
 jobs:
-  tests:
-    uses: ./.github/workflows/tests.yaml
-  debbuild:
-    name: Debian
-    runs-on: ubuntu-20.04
-    needs: tests
-    steps:
-      - name: Install Pre-requisites
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -qq apt-utils build-essential gzip devscripts debhelper bats wget
-      - name: Build Debian Package
-        run: |
-          git clone https://github.com/wslutilities/wslu-debian builder
-          cd ./builder
-          bash ./build.sh latest debian buster
-      - uses: actions/upload-artifact@v4
-        with:
-          name: DebianDEBs
-          path: builder/pkgs
+  #tests:
+    #uses: ./.github/workflows/tests.yaml
   pgwbuild:
     name: Pengwin
     runs-on: ubuntu-20.04
-    needs: tests
+    #needs: tests
     steps:
       - name: Install Pre-requisites
         run: |
@@ -63,66 +46,9 @@ jobs:
         env:
           PACKAGECLOUD_TOKEN: ${{ secrets.PGW_DEV_DEPLOY_KEY }}
         run: package_cloud push whitewaterfoundry/wslu/debian/bookworm ./PengwinDEBs/*.deb --skip-errors
-  rpmobsbuild:
-    name: RPM - OpenSUSE Build Service
-    runs-on: ubuntu-20.04
-    needs: tests
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Pre-requisites
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -qq build-essential tar
-      - name: configure
-        run: |
-          bash ./configure.sh --rpm obs
-          cp extras/build/rpm/obs/wslu.spec ../wslu.spec
-          rm -rf *
-          mkdir -p SOURCES
-          mkdir -p SPECS
-          cp ../wslu-*.tar.gz SOURCES
-          cp ../wslu.spec SPECS
-      - name: rpmbuild
-        uses: ./.github/actions/rpmbuild/
-      - name: moving files
-        run: |
-          mkdir obs_res
-          cp ../wslu-*.tar.gz obs_res
-          cp ../wslu.spec obs_res
-      - uses: actions/upload-artifact@v4
-        with:
-          name: OBS_RES
-          path: obs_res
-  obsdeploy:
-    name: OpenSUSE Build Service Deploying
-    needs: rpmobsbuild
-    runs-on: ubuntu-latest
-    steps:
-        - name: Retrive package for deployment
-          uses: actions/download-artifact@v4
-          with:
-            name: OBS_RES
-            path: OBS_RES
-        - name: Install Pre-requisites
-          run: |
-            sudo apt-get update -qq
-            sudo apt-get install -qq osc python3-m2crypto
-        - name: Install API token for osc
-          env:
-            API_TOKEN_CONTENT: ${{ secrets.OBS_API_TOKEN }}
-          run: |
-            mkdir -p "$HOME/.config/osc"
-            echo -e "[general]\napiurl = https://api.opensuse.org\n[https://api.opensuse.org]\nuser = wslutilities\npass = $API_TOKEN_CONTENT" > "$HOME/.config/osc/oscrc"
-        - name: Uploading OBS source files
-          run: |
-            osc checkout home:wslutilities
-            cp OBS_RES/* home:wslutilities/wslu/
-            cd home:wslutilities/wslu/
-            osc addremove
-            osc commit -m "Build at $(date)"
   rpmcoprbuild:
     name: RPM - Cool Other Package Repo
-    needs: tests
+    #needs: tests
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -150,26 +76,3 @@ jobs:
         with:
           name: COPRRPMs
           path: compiled_rpms
-  coprdeploy:
-    name: Cool Other Package Repo Deploying
-    needs: rpmcoprbuild
-    container: fedora:latest
-    runs-on: ubuntu-latest
-    steps:
-        - name: Retrive package for deployment
-          uses: actions/download-artifact@v4
-          with:
-            name: COPRRPMs
-            path: COPRRPMs
-        - name: Install API token for copr-cli
-          env:
-            API_TOKEN_CONTENT: ${{ secrets.COPR_API_TOKEN }}
-          run: |
-            mkdir -p "$HOME/.config"
-            echo "$API_TOKEN_CONTENT" > "$HOME/.config/copr"
-        - name: Install tooling for source RPM build
-          run: |
-            dnf -y install @development-tools @rpm-development-tools
-            dnf -y install copr-cli make
-        - name: Submit the build by uploading the source RPM
-          run: copr-cli build wslutilities/wslu COPRRPMs/*.src.rpm
